# j0.lol

./: Cargo.toml  Dockerfile  README.md  TODO.md  askama.toml  flake.nix  fly.toml  justfile  result
posts/: test.md  zerobridge-launch.md
src/: handlers.rs  main.rs  post.rs
static/: font-awesome-extension.css  style.css  webfont.css
static/oneko.js/: oneko.js
static/sillytetrisgame/: index.html
static/sillytetrisgame/v1/: cart.tic
static/sillytetrisgame/v2/: cart.tic
static/sillytetrisgame/v3/: cart.tic
static/sillytetrisgame/v4/: cart.tic
templates/: base.html  contact.html  index.askama  index.html  post.html  posts.html
